--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 async-stream = "0.3.3"
 nohash-hasher = "0.2.0"
+rand = "0.8.5"
 rpds = "0.12.0"
 tokio = { version = "1.25.0", features = ["full"] }
 tokio-stream = "0.1.11"
