--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 async-stream = "0.3.3"
 nohash-hasher = "0.2.0"
 rand = "0.8.5"
+rand_distr = "0.4.3"
 rpds = "0.12.0"
 tokio = { version = "1.25.0", features = ["full"] }
 tokio-stream = "0.1.11"
