--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,17 @@ edition = "2021"
 
 [dependencies]
 async-stream = "0.3.3"
+clap = { version = "4.1.4", features = ["derive"] }
+console-subscriber = { version = "0.1.8", optional = true }
 nohash-hasher = "0.2.0"
 rand = "0.8.5"
 rand_distr = "0.4.3"
 rpds = "0.12.0"
-tokio = { version = "1.25.0", features = ["full"] }
+tokio = { version = "1.25.0", features = ["full", "tracing"] }
 tokio-stream = "0.1.11"
+
+[profile.release]
+debug = true
+
+[features]
+tracing = ["console-subscriber"]
